welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: not found: value doite
    if (litMessage()=='R') {doite() ; avance();}
                            ^